# VITALS

./: .buildinfo  01_Finding_Concurrent_Data.html  APP_BUILD.html  Panel_01.html  Panel_01A.html  Panel_02A.html  genindex.html  intro.html  markdown-notebooks.html  notebooks.html  objects.inv  old_notebooks.html  pyproject.toml  search.html  searchindex.js
_sources/: 01_Finding_Concurrent_Data.ipynb  notebooks.ipynb
books/myfirstbook/: APP_BUILD.ipynb  Panel_01A.ipynb  Panel_02A.ipynb  _config.yml  _toc.yml  eomaps_env1.yml  intro.md
books/myfirstbook/_build/.doctrees/: 01_Finding_Concurrent_Data.doctree  APP_BUILD.doctree  Panel_01.doctree  Panel_01A.doctree  Panel_02A.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  old_notebooks.doctree
books/myfirstbook/_build/html/: 01_Finding_Concurrent_Data.html  Panel_01.html  Panel_02A.html  genindex.html  intro.html  markdown.html  notebooks.html  objects.inv  old_notebooks.html  search.html  searchindex.js
books/myfirstbook/_build/html/_sources/: 01_Finding_Concurrent_Data.ipynb  Panel_02A.ipynb  intro.md  notebooks.ipynb
books/myfirstbook/_build/jupyter_execute/: 01_Finding_Concurrent_Data.ipynb  APP_BUILD.ipynb  Panel_01.ipynb  Panel_02A.ipynb  markdown-notebooks.ipynb  notebooks.ipynb  old_notebooks.ipynb
