[tool.poetry]
name = "vitals"
version = "0.1.0"
description = ""
authors = ["ials <ials@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-book = "^1.0.3"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
polars = "^1.9.0"
altair = "^5.4.1"
plotly = "^5.24.1"
ghp-import = "^2.1.0"
vega-datasets = "^0.9.0"
fiona = "^1.10.1"
folium = "^0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
